--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "git-teste",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run lite", 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite": "lite-server" 
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
     "url": "https://github.com/zeeduardomm/git-teste/issues"
   },
   "homepage": "https://github.com/zeeduardomm/git-teste#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "lite-server": "^2.6.1"
+  }
 }
